# sql1cv8

./: .gitignore  Cargo.toml
queries/: getCVNames.sql  getDBNames.sql  getDBVersion.sql  getDB_pg.txt  getDB_ru.sql  getDB_ru_pg.sql
src/: consts.rs  creater.rs  init_objects.rs  lib.rs  loader.rs  main.rs  metadata.rs  parser.rs  processing.rs  queries.rs
