[package]
name = "sql1cv8"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-embed = "8.5"
lazy_static = "1.5"
hashbrown = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = "0.8"
regex = "1"

#may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git" } #, rev = "917ed78", default-features = false }
tokio-postgres = { git="https://github.com/fafhrd91/postgres.git", branch="ntex-2" }
ntex = "2.4"
#ntex-compio = "0.1.2"
tok_io = {version = "1", package = "tokio" }

[features]
default = ["tokio"]
# tokio runtime
tokio = ["ntex/tokio"]
# compio runtime
compio = ["ntex/compio", ]