[package]
name = "sql1cv8"
version = "0.2.0"
edition = "2021"

[dependencies]
rust-embed = "8.5"
lazy_static = "1.5"
hashbrown = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio"] } 
#sqlx = { path="../../sql/sqlx", features = ["runtime-tokio"] }
#sqlx-core = { path="../../sql/sqlx/sqlx-core" }
sqlx-core = { version = "0.8" }
regex = { version = "1", features = ["logging"] }
flate2 = "1"

welds-connections = { version = "0.4", features = [ 'mssql', 'postgres', "tokio"]  }
welds = { version = "0.4", features = [ 'mssql', 'postgres' ]  }

#may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git" } #, rev = "917ed78", default-features = false }
#tokio-postgres = { git="https://github.com/fafhrd91/postgres.git", branch="ntex-2" }
ntex = "2.4"
#ntex-compio = "0.1.2"
#tok_io = {version = "1", package = "tokio" }
#anyhow = "1"

tokio = "1"
[dependencies.tokio-util]
version = "0.7"
features = ["compat"]

[dependencies.tiberius]
version = "0.12"
features = ["rustls-native-certs", "tokio"]
default-features = false


[features]
default = ["tokio"]
# tokio runtime
tokio = ["ntex/tokio"]
# compio runtime
compio = ["ntex/compio"]